--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "riftfox/wechat-token",
-  "description": "description",
+  "description": "微信公众平台获取接口调用凭据抽象模块SDK",
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
